--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
 <hr>
 <app-counter></app-counter>
 <hr>
@@ -7,4 +7,6 @@
 <hr>
 
 <app-heroes-list></app-heroes-list>
-<hr>
+<hr> -->
+
+<app-dbz-main-page></app-dbz-main-page>
